--- a/templates/index.html
+++ b/templates/index.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
-    <title>Guess My Number!</title>
+    <title>Borgor Ham Borgor!</title>
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
-      <div class="number">?</div>
+      <h1>Ham Borgor Borgor!</h1>
+      <p class="between">(Between Ham and Borgor)</p>
+      <button class="btn again">Ham Borgor!</button>
+      <div class="number">🍔</div>
     </header>
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="btn check">Ham Borgor!</button>
       </section>
       <section class="right">
-        <p class="message">Start guessing...</p>
-        <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <p class="message">Ham Borgor...</p>
+        <p class="label-score">🍔 Borgor Borgor: <span class="score">20</span></p>
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          🍔 Ham Borgor: <span class="highscore">{{ highscore }}</span>
         </p>
       </section>
     </main>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
   </body>
 </html>
